# Space_Muck

./: .coverage  .coveragerc  .deepsource.toml  .gitignore  .windsurf-scratchpad.md  .windsurfcontext  .windsurfcontext.md  .windsurfprompt.md  .windsurfrules  .windsurfscratchpad  RADS.py  README.md  Scratchpad.md  System_Scratchpad.md  check_linting.py  coverage.xml  error_tasklist.md  example1.py  fix_all_imports.sh  optional-requirements.txt  prompt_pad.md  pylintrc  pyproject.toml  requirements.txt  rich_directory_tree.py  rich_directory_tree_Space_Muck.md  run_tests.py  run_tests.sh  space_muck_directory.py  system_diagrams.md  test_config_import.py  test_imports.py  test_python.py  ui_enhancements.md
Project_Analysis/: ANALYSIS-README.MD  WORKFLOW.md
Project_Analysis/config/: error_categories.json  exclusions.json  prioritization.json  thresholds.json
Project_Analysis/scripts/: lint_export.sh
Project_Analysis/templates/: metrics_report.md  project_analysis.md  standards.md
benchmark_results/: benchmark_log.txt
docs/: asteroid_field.py.bak  generate_tree.py
docs/CodeBase_Docs/: CodeBase_Architecture.md  CodeBase_Error_Fixes.md  CodeBase_Mapping.md  CodeBase_Scratchpad.md
docs/Python Analysis and Project Enhancements/: 03 - In Depth Python Project Analysis and Enhancement Examples.md  04_task_list.md
docs/System_Docs/: ASCII_UI_Implementation_Plan.md  System_Directory_Tree.md  System_Scratchpad.md  Windsurf_System_Architecture.md  Windsurf_System_Integration.md  system_architechture_integration.md
src/: RADS.py  __init__.py  config.py  game.py  main.py  python_fixer.toml  symbiote_algorithm.py  test_imports.py
src/algorithms/: advanced_population.py  cellular_automaton.py  deep_economy_decision.py  economy_decision.py  extended_ca.py  mip_optimizer.py  ml_adapt.py  ml_aggression_model.py  pareto_optimizer.py  pattern_analysis.py  pde_spatial.py  population_models.py  spatial_economic_model.py  symbiote_algorithm.py
src/config/: __init__.py  config.py  dependency_settings.py
src/contexts/: game_context.py  module_context.py  threshold_context.py
src/converters/: __init__.py  converter_models.py  converter_registry.py
src/demos/: ascii_box_event_demo.py  ascii_crew_management_panel_demo.py  ascii_inventory_panel_demo.py  ascii_resource_display_demo.py  ascii_ship_status_panel_demo.py  ascii_ui_demo.py  symbiote_evolution_demo.py
src/docs/: CombatSystem_Design.md  GPU_Acceleration_Guide.md  GPU_Hardware_Compatibility.md  game_build.md
src/entities/: asteroid_generator.py  base_entity.py  base_generator.py  crew_member.py  enemy_ship.py  enhanced_miner_entity.py  fleet.py  miner_entity.py  player.py
src/events/: __init__.py  event_bus.py
src/examples/: advanced_mining_example.py  dependency_config_example.py
src/generators/: __init__.py  asteroid_field.py  asteroid_generator.py  base_generator.py  encounter_generator.py  procedural_generator.py  symbiote_evolution_generator.py
src/python_fixer/: README.md  __init__.py  base.py  cli.py  module_integration.md  pyproject.toml  requirements.txt  setup.py
src/python_fixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python_fixer/analyzers/: __init__.py  aggregator.py  analyze_space_muck.py  analyzer.py  correlator.py  pattern.py  project_analysis.py
src/python_fixer/core/: __init__.py  analyze_space_muck.py  analyzer.py  fixer.py  fixes.py  project_analysis.py  signals.py  signatures.py  types.py
src/python_fixer/docs/: doc_generator.py  module_integration.md  project_map_generator.py
src/python_fixer/enhancers/: __init__.py  enhancement_system.py  event_system.py  test_enhancement_system.py
src/python_fixer/fixers/: README.md  __init__.py  manager.py  patch.py  smart.py  test_integration.py  transformers.py
src/python_fixer/formatters/: __init__.py  console.py  enhanced.py  formatter.py  formatters.py  json.py
src/python_fixer/logging/: __init__.py  enhanced.py  formatters.py  log_snippets.py  structured.py  variant_loggers.py
src/python_fixer/parsers/: __init__.py  header_map_parser.py  project_map_parser.py  test_header_parser.py  test_project_map_parser.py
src/python_fixer/python_fixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python_fixer/tests/: conftest.py  integration_framework.py  quality_analyzer.py  test_circular_dependencies.py  test_fixers_integration.py  test_generator.py  test_header_parser.py  test_logging_consistency.py  test_module_integration.py  test_project_map_parser.py  test_signals.py  test_signatures.py
src/python_fixer/tests/core/: test_import_validation.py  test_imports.py  test_runtime_types.py  test_signals.py  test_signatures.py  test_type_hints.py
src/python_fixer/utils/: __init__.py  context.py  metrics.py
src/python_fixer/web/: __init__.py  dashboard.py
src/python_fixer/web/templates/: index.html
src/systems/: combat_system.py  crew_management_system.py  encounter_generator.py  event_system.py  exploration_manager.py  fleet_manager.py  game_loop.py  mining_system.py  module_manager.py  resource_manager.py  trading_system.py
src/tests/: README.md  benchmark_base_generator.py  benchmark_comprehensive_gpu.py  benchmark_gpu_noise_generation.py  benchmark_parallel_processing.py  benchmark_procedural_generation.py  directory_tree.py  directory_tree_simple.py  directory_tree_tests.md  rich_directory_tree_tests.md  test_asteroid_generator.py  test_base_entity.py  test_base_generator.py  test_cellular_automaton_utils.py  test_fleet.py  test_fleet_manager.py  test_game.py  test_gpu_acceleration.py  test_gpu_clustering.py  test_gpu_utils.py  test_imports.py  test_miner_entity.py  test_mock_data.py  test_pattern_generator.py  test_player.py  test_procedural_generator.py  (+8 more)
tests/: integration_tests.py  mock_data_test.py  performance_tests.py  regression_tests.py  test_basic_imports.py  test_cellular_automaton_integration.py  test_combat_system.py  test_encounter_generator.py  test_import_fixes.py  test_individual_imports.py  test_runner_config.py  unit_tests.py
(+173 files in other folders)
